# gen3-release-utils

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  README.md  _config-diff-completions.sh  _config-diff-completions.zsh  add_to_calendar.py  apply_release_to_qa_envs.sh  config-diff  delete_branch.sh  delete_tags.sh  environments_list.txt  generate_release_notes.sh  make_branch.sh  make_stable_and_tag.sh  manifest-diff-autocomplete.sh  manifest-diff.sh  release-tag.sh  release_names.csv  replicate_manifest_config.sh  repo_list.txt
gen3release-sdk/: #environments_config_manager.py#  .#environments_config_manager.py  .gitignore  create_jira_project_version.py  env_cli.py  env_cli.py~  environments_config_manager.py  pyproject.toml  release_jiras.py  update_jira_release.py
gen3release-sdk/config/: env.py
gen3release-sdk/filesys/: io.py  io.py~
gen3release-sdk/gen3release/: env_cli.py
gen3release-sdk/gen3release/config/: env.py
gen3release-sdk/gen3release/filesys/: io.py  io_processing.py
gen3release-sdk/gen3release/gen3release.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gen3release-sdk/gen3release/gith/: git.py
gen3release-sdk/gith/: GithubFacade.py~  git.py  git.py~
gen3release-sdk/tests/: .coverage  conftest.py  helpers.py  test_env.py  test_env_cli.py  test_git.py  test_io.py  test_io_processing.py
gen3release-sdk/tests/data/: test2_manifest.json  test_manifest.json  testmerge_manifest.json  testnaming_manifest.json
gen3release-sdk/tests/data/fake_source_env/: etlMapping.yaml  manifest.json  merge_manifest.json
gen3release-sdk/tests/data/fake_source_env/portal/: gitops.css  gitops.json
gen3release-sdk/tests/data/fake_target_env/: etlMapping.yaml  manifest.json  merge_manifest.json  naming_manifest.json
gen3release-sdk/tests/data/test_environment.$$&/: manifest.json
gen3release-sdk/tests/data/test_references/: testfence_config.yaml  testmerge_manifest.json  testnaming_etlMapping.yaml  testnaming_manifest.json
(+67 files in other folders)
