[tool.poetry]
name = "gen3release"
version = "0.2.0"
description = "Gen3 Release Management SDK"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
packages = [
    { include = "config", from = "gen3release" },
    { include = "filesys", from = "gen3release" },
    { include = "gith", from = "gen3release" },
    { include = "gen3release/env_cli.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
PyGitHub = "^1.47"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gen3release = 'gen3release.env_cli:main'
