[tool.poetry]
name = "gen3release"
version = "1.0"
description = "Gen3 Release Management SDK"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
packages = [
    { include = "config", from = "gen3release" },
    { include = "filesys", from = "gen3release" },
    { include = "gith", from = "gen3release" },
    { include = "gen3release/env_cli.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
PyGitHub = "^1.47"
'ruamel.yaml' = "^0.16.10"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gen3release = 'gen3release.env_cli:main'
[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
